# smb-path

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  smb_path.pth
.github/workflows/: static-code-check.yml  test-smb-path.yml
src/smb_path/: path_patch.py  smb_path.py
tests/: test_smb_path.py
